wss activado otra vez