@@ -135,7 +135,6 @@
 				<configuration>
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<includes>
 						<exclude>**/*ejecutor.java</exclude>
 					</includes>
